pink grid exercise

--- a/holy-grail-grid.html
+++ b/holy-grail-grid.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="holy-grail-grid.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Pink Image Display Site</title>
   </head>
   <body>
@@ -25,13 +26,13 @@
         <h2>Lots of Pink</h2>
         <p>Look at the pretty flowers.</p>
         <img
-          src="images/pink-flowers-of-sakura-branches-on-blury-background-1634801.jpg"
+          src="pink-flowers-of-sakura-branches-on-blury-background-1634801.jpg"
           alt="flower"
         />
         <p>Here's some more!</p>
-        <img src="images/cherryblossoms.jpg" alt="cherry blossom photo" />
+        <img src="cherryblossoms.jpg" alt="cherry blossom photo" />
         <p>Not flowers, but still pink...</p>
-        <img src="images/crystal.jpg" alt="crystal photo" />
+        <img src="crystal.jpg" alt="crystal photo" />
       </main>
       <div class="right_sidebar">
         <h3>Right Sidebar</h3>
