--- a/holy-grail-grid.html
+++ b/holy-grail-grid.html
@@ -26,13 +26,13 @@
         <h2>Lots of Pink</h2>
         <p>Look at the pretty flowers.</p>
         <img
-          src="pink-flowers-of-sakura-branches-on-blury-background-1634801.jpg"
+          src="images/pink-flowers-of-sakura-branches-on-blury-background-1634801.jpg"
           alt="flower"
         />
         <p>Here's some more!</p>
-        <img src="cherryblossoms.jpg" alt="cherry blossom photo" />
+        <img src="images/cherryblossoms.jpg" alt="cherry blossom photo" />
         <p>Not flowers, but still pink...</p>
-        <img src="crystal.jpg" alt="crystal photo" />
+        <img src="images/crystal.jpg" alt="crystal photo" />
       </main>
       <div class="right_sidebar">
         <h3>Right Sidebar</h3>
